@@ -30,7 +30,7 @@ body {
 }
 
 .sidebar-offcanvas {
-    position: absolute;
+    position: absolute !important;
     top: 0;
 }
 
